--- a/src/components/Pages/Services/Service/Service.css
+++ b/src/components/Pages/Services/Service/Service.css
@@ -1,5 +1,5 @@
 .service-container {
-    border: 1px solid lightblue;
+    border: 2px solid #606060FF;
     border-radius: 10px;
     padding: 10px;
     text-align: center;
@@ -10,4 +10,20 @@
     border-top-right-radius: 10px;
     ;
     width: 100%;
+}
+
+.bookBtn {
+    width: 100%;
+    margin: 8px 3px;
+    padding: 15px 7px;
+    border-radius: 8px;
+    background-color: #D6ED17FF;
+    outline: none;
+    color: #606060FF;
+    border: none;
+}
+
+.bookBtn:hover {
+    background-color: #dcf715;
+    color: black;
 }
