--- a/src/components/Pages/Reviews/ReviewPost/ReviewPost.css
+++ b/src/components/Pages/Reviews/ReviewPost/ReviewPost.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@500;700&family=Roboto&display=swap');
 
 .reviewItem-container {
-    width: 250px;
-    height: 350px;
+    width: 300px;
+    height: 450px;
     padding: 10px 0px 10px 20px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     text-align: left;
@@ -14,6 +14,7 @@
 .customer-img {
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 .reviewItem-container img {
@@ -23,10 +24,12 @@
 .name {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
+
 }
 
 .name span {
     font-weight: 500;
+    color: rgb(214, 237, 23);
 }
 
 .comment {
