--- a/src/components/Pages/Reviews/Reviews/Reviews.css
+++ b/src/components/Pages/Reviews/Reviews/Reviews.css
@@ -1,6 +1,20 @@
 .reviews {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+    grid-gap: 25px;
+
+}
+
+@media screen and (max-width:576px) {
+    .reviews-container {
+        max-width: 400px;
+        margin: 0px auto;
+        width: 90%;
+    }
+
+    .reviews {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
 
 }
