--- a/src/components/Pages/About/About.css
+++ b/src/components/Pages/About/About.css
@@ -8,14 +8,16 @@
     width: 100%;
 }
 
-ul {
+.achievment ul,
+.certificates ul {
     list-style: none;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     text-align: left;
 }
 
-ul li::before {
+.achievment ul li::before,
+.certificates ul li::before {
     font-size: 28px;
 
     content: "\2022";
