--- a/src/components/Pages/About/About.css
+++ b/src/components/Pages/About/About.css
@@ -8,19 +8,38 @@
     width: 100%;
 }
 
-.achievment ul,
-.certificates ul {
+.achievment {
     list-style: none;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     text-align: left;
 }
 
-.achievment ul li::before,
-.certificates ul li::before {
-    font-size: 28px;
+.certificates {
+    list-style: none;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    text-align: left;
+}
 
+.achievment li::before {
+    font-size: 28px;
     content: "\2022";
     padding-right: 10px;
     color: #c4d80a;
+}
+
+.certificates li::before {
+    font-size: 28px;
+    content: "\2022";
+    padding-right: 10px;
+    color: #c4d80a;
+}
+
+@media screen and (max-width:576px) {
+    .about-me {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
 }
