--- a/src/components/Pages/Home/Banner/Banner.css
+++ b/src/components/Pages/Home/Banner/Banner.css
@@ -1,3 +1,11 @@
-.caro-img {
-    height: 500px;
+.carousal-caption {
+    top: 70%;
+    transform: translateY(-50%);
+    padding-bottom: initial;
+    color: black;
+    bottom: 50%;
+    text-align: center;
+    max-width: 500px;
+    left: auto;
+    /*top: auto;*/
 }
