fixed error not route to checheckout page while logging in

--- a/src/components/Pages/Home/Banner/Banner.css
+++ b/src/components/Pages/Home/Banner/Banner.css
@@ -1,6 +1,6 @@
 .carousal-caption {
     top: 70%;
-    transform: translateY(-50%);
+    /* transform: translateY(-50%); */
     padding-bottom: initial;
     color: black;
     bottom: 50%;
